BUGFIX: Fixes to improve fly-out menu performance on mobile.

--- a/styles/overlay.css
+++ b/styles/overlay.css
@@ -1,13 +1,56 @@
+
+
+/**
+	* Prevent distracting sub-menus from displaying in the overlay.
+	*/
+.overlay .menu-item-has-children:hover > .sub-menu {
+	display:none;
+}
+
+
+/**
+ * Overlay turned on: prevent content from scrolling but
+ *  let the user scroll the fly-out menu.
+ */
+body.fly-out-menu #page {
+	position: fixed;
+	overflow: hidden;
+	top: 0px;
+	left: 0px;
+}
+
+
+.overlay {
+	z-index: 112;
+	position: fixed;
+	overflow-y: scroll;
+	width: 100vw;
+	height: 100%;
+	background-color: inherit;
+	top: 0;
+	left: 0;
+	transition-property: left, opacity;
+	transition-duration: 0.3s, 0.3s;
+	transition-timing-function: ease-out, ease-out;
+	transition-delay: 0.0s, 0.0s;
+	scroll-behavior: smooth;
+	-webkit-overflow-scrolling: touch;
+}
+
 .overlay-content {
+	box-sizing: content-box;
+	overflow: visible;
+	padding-left:2%;
 	background-color: inherit;
 	color:inherit;
-	padding-left:2%;
 }
 
 
 .admin-bar #overlay {
 	margin-top:47px;
 }
+
+
 @media screen and (min-width:1200px) {
 	.admin-bar #overlay {
 			margin-top: 32px;
@@ -56,7 +99,7 @@
 	line-height:2.0em;
 	border-bottom-width: 1px;
 	border-bottom-style: groove;
-	border-bottom-color:inherit;
+	border-bottom-color:transparent;
 }
 
 .navigation-main .menu {
@@ -92,21 +135,7 @@ button#overlay-close {
 }
 
 
-.overlay {
-	overflow: hidden;
-	width: 100vw;
-	height: 100%;
-	z-index: 112;
-	background-color: inherit;
-	position: fixed;
-	top: 0;
-	left: 0;
 
-	transition-property: left, opacity;
-	transition-duration: 0.3s, 0.3s;
-	transition-timing-function: ease-out, ease-out;
-	transition-delay: 0.0s, 0.0s;
-}
 
 
 .drawer-off {
